k8s/local_registry.yml

apiVersion: v1
kind: Service
metadata:
  name: kube-registry
  namespace: kube-system
  labels:
    k8s-app: kube-registry
spec:
  selector:
    k8s-app: kube-registry
  ports:
  - name: registry
    port: 5000
    protocol: TCP

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-registry-proxy
  namespace: kube-system
  labels:
    k8s-app: kube-registry-proxy
    kubernetes.io/cluster-service: "true"
    version: v0.4
spec:
  selector:
    matchLabels:
      k8s-app: kube-registry-proxy
      version: v0.4
  template:
    metadata:
      labels:
        k8s-app: kube-registry-proxy
        version: v0.4
    spec:
      containers:
      - name: kube-registry-proxy
        image: gcr.io/google_containers/kube-registry-proxy:0.4
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 100m
            memory: 50Mi
        ports:
        - name: registry
          containerPort: 80
          hostPort: 5000
