k8s/puppetmaster_deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: puppetmaster
  labels:
    run: puppetmaster
spec:
  type: LoadBalancer
  ports:
  - port: 8140
    targetPort: 8140
    protocol: TCP
    name: puppetmaster
  selector:
    run: puppetmaster

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: puppetmaster
spec:
  selector:
    matchLabels:
      run: puppetmaster
  replicas: 2
  template:
    metadata:
      labels:
        run: puppetmaster
    spec:
      containers:
      - command:
        - /bin/sh
        - -c
        - ./puppetmaster
        image: localhost:5000/puppetmaster:latest
        name: puppetmaster
        ports:
        - containerPort: 8140
          protocol: TCP
        resources: {}
        securityContext:
          allowPrivilegeEscalation: true
          capabilities: {}
          privileged: false
          readOnlyRootFilesystem: false
        tty: true
        workingDir: /home/root/puppetmaster
