k8s/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: puppetmaster
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: puppet.test
      http:
        paths:
        - path: /
          backend:
            serviceName: puppetmaster
            servicePort: 8140
